--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,7 @@ html{
     width: 200px;
     color: black;
     text-align: center;
+    background-color: #fdfcfc;
  }
  .ecuaciones input{
     height: 60px;
